test/distributed/cases/function/function_mid.result
SELECT mid('zhanziziefw',1,2);
mid(zhanziziefw, 1, 2)
zh
SELECT mid('jdkajfkw83q9iwqjfeqw_7832',5,22);
mid(jdkajfkw83q9iwqjfeqw_7832, 5, 22)
jfkw83q9iwqjfeqw_7832
SELECT mid('我是一只自由的鸟',1,3);
mid(我是一只自由的鸟, 1, 3)
我是一
SELECT mid('好的fjewka鸭dfj00-=392*&*^$',-8,4);
mid(好的fjewka鸭dfj00-=392*&*^$, -8, 4)
392*
SELECT mid('好的fjewka鸭dfj00-=392',0,2);
mid(好的fjewka鸭dfj00-=392, 0, 2)

SELECT mid('abchfjwabcABCvshfjdrvoiewjvkmdns mndsabcAbcueiuiwqjemkvwme000',6,40);
mid(abchfjwabcABCvshfjdrvoiewjvkmdns mndsabcAbcueiuiwqjemkvwme000, 6, 40)
jwabcABCvshfjdrvoiewjvkmdns mndsabcAbcue
SELECT mid('http://www.google.com.cn/',-2,6);
mid(http://www.google.com.cn/, -2, 6)
n/
SELECT mid('',1,3);
mid(, 1, 3)

SELECT mid(NULL,1,2);
mid(null, 1, 2)
null
SELECT mid('hduw',3,8);
mid(hduw, 3, 8)
uw
SELECT mid('',-1,3);
mid(, -1, 3)

SELECT mid('wfroiewjvre',NULL,3);
mid(wfroiewjvre, null, 3)
null
SELECT mid('vjdiejevfe',1,NULL);
mid(vjdiejevfe, 1, null)
null
SELECT mid('efjkw',NULL,NULL);
mid(efjkw, null, null)
null
SELECT mid('',2,9);
mid(, 2, 9)

DROP TABLE IF EXISTS mid_01;
CREATE TABLE mid_01(id int,
str1 CHAR,
d1 int,
d2 tinyint unsigned,
PRIMARY KEY(id));
INSERT INTO mid_01 VALUES(1, 'h', 3, 12);
INSERT INTO mid_01 VALUES(2, '', -2, 32);
INSERT INTO mid_01 VALUES(3, '2',-2, 2);
INSERT into mid_01 VALUES(4, '*', NULL, 3);
INSERT INTO mid_01 VALUES(5, 'd', 2, NULL);
INSERT INTO mid_01 VALUES(6, 'ehiuwjqnelfkw', NULL, 3);
internal error: Can't cast 'ehiuwjqnelfkw' from VARCHAR type to CHAR type. Src length 13 is larger than Dest length 1
INSERT INTO mid_01 VALUES(7, '2',-2147483649, 0);
Data truncation: data out of range: data type int32, value '-2147483649'
INSERT INTO mid_01 VALUES(8, '1', 328, 258);
Data truncation: data out of range: data type uint8, value '258'
SELECT mid(str1, 1, 2) FROM mid_01;
mid(str1, 1, 2)
h

2
*
d
SELECT mid(str1, d1, 3) FROM mid_01;
mid(str1, d1, 3)



null

SELECT mid(str1, d1, d2) FROM mid_01;
mid(str1, d1, d2)



null
null
SELECT * FROM mid_01 WHERE mid(str1,1,1) = 'h';
id    str1    d1    d2
1    h    3    12
SELECT * FROM mid_01 WHERE mid(str1,-1,2) IS NULL AND d1 IS NOT NULL;
id    str1    d1    d2
SELECT d1, d2 FROM mid_01 WHERE str1 = (SELECT str1 FROM mid_01 WHERE mid(str1,-1,1) = '*');
d1    d2
null    3
SELECT(SELECT str1 FROM mid_01 WHERE mid(str1,2,3) = NULL),d1,d2 FROM mid_01 WHERE id = 4;
(select str1 from mid_01 where mid(str1, 2, 3) = null)    d1    d2
null    null    3
SELECT LENGTH(mid(str1, ABS(d1),d2)) FROM mid_01 WHERE str1 = '2';
length(mid(str1, abs(d1), d2))
0
SELECT empty(mid(str1, d1, d2)) FROM mid_01 WHERE ABS(d2) = 3;
empty(mid(str1, d1, d2))
null
SELECT mid(str1, d1, d2) FROM mid_01;
mid(str1, d1, d2)



null
null
SELECT mid(str1, d1, 2) FROM mid_01 WHERE ABS(d1) % 2 = 0;
mid(str1, d1, 2)



SELECT mid(str1, d1, d2) FROM mid_01 WHERE d1 > 0;
mid(str1, d1, d2)

null
DROP TABLE IF EXISTS mid_02;
CREATE TABLE mid_02(id int,
s VARCHAR(50),
d1 smallint,
d2 bigint unsigned NOT NULL,
PRIMARY KEY(id));
INSERT INTO mid_02 VALUES(1, 'woshishei3829', 3, 12);
INSERT INTO mid_02 VALUES(2, '', -2, 2132);
INSERT INTO mid_02 VALUES(3, ' 356284o 329&***((^%$%^&',-2, 2);
INSERT into mid_02 VALUES(4, NULL, NULL, 3);
INSERT INTO mid_02 VALUES(5, NULL, 2, 4);
INSERT INTO mid_02 VALUES(6, 'ehwqkjf8392__+ ',NULL,6);
INSERT INTO mid_02 values(7, '123', 0, 2);
INSERT INTO mid_02 VALUES(8, 'ehiuwjey73y8213092kjfm3e#$%^WHJfne32edwfdewvvcqeveqnelfkw', NULL, 3);
internal error: Can't cast 'ehiuwjey73y8213092kjfm3e#$%!^(MISSING)WHJfne32edwfdewvvcqeveqnelfkw' from VARCHAR type to VARCHAR type. Src length 57 is larger than Dest length 50
INSERT INTO mid_02 VALUES(9, '2',32769, 0);
Data truncation: data out of range: data type int16, value '32769'
INSERT INTO mid_02 VALUES(10, '1', 328, 18446744073709551618);
Data truncation: data out of range: data type uint64, value '18446744073709551618'
SELECT mid(s, NULL, NULL) FROM mid_02;
mid(s, null, null)
null
null
null
null
null
null
null
SELECT mid(s, NULL, 2) FROM mid_02;
mid(s, null, 2)
null
null
null
null
null
null
null
SELECT mid(s, 1, NULL) FROM mid_02;
mid(s, 1, null)
null
null
null
null
null
null
null
SELECT mid(s, 1, 9) FROM mid_02 WHERE mid(s, 1, 2) = 'eh';
mid(s, 1, 9)
ehwqkjf83
SELECT mid(s, d1, d2) FROM mid_02;
mid(s, d1, d2)
shishei3829

^&
null
null
null

SELECT mid(s, d1, -3) FROM mid_02 WHERE d2 = 2;
mid(s, d1, -3)


SELECT concat_ws('-',mid(s,2,3),mid(s,1,2)) FROM mid_02 WHERE id BETWEEN 2 AND 3;
concat_ws(-, mid(s, 2, 3), mid(s, 1, 2))
-
356- 3
SELECT find_in_set(mid(s,1 + 2,9),'woshishei') FROM mid_02 WHERE id = 1;
find_in_set(mid(s, 1 + 2, 9), woshishei)
0
SELECT empty(mid(s,1,2)) FROM mid_02;
empty(mid(s, 1, 2))
false
true
false
null
null
false
false
SELECT LENGTH(mid(s, -1, 7281979 % 2)) FROM mid_02;
length(mid(s, -1, 7281979 % 2))
1
0
1
null
null
1
1
SELECT lengthutf8(mid(s, -1, 3)) FROM mid_02;
lengthutf8(mid(s, -1, 3))
1
0
1
null
null
1
1
SELECT LTRIM(mid(s, 1, 16 - 11)) FROM mid_02;
ltrim(mid(s, 1, 16 - 11))
woshi

3562
null
null
ehwqk
123
SELECT RTRIM(mid(s, -3, 2)) FROM mid_02 WHERE id = 6;
rtrim(mid(s, -3, 2))
_+
SELECT LPAD(mid(s, 1, 2),20,'*') FROM mid_02;
lpad(mid(s, 1, 2), 20, *)
******************wo
********************
****************** 3
null
null
******************eh
******************12
SELECT RPAD(mid(s, -8, 4), 5, '-') FROM mid_02 WHERE ABS(d1) = 0;
rpad(mid(s, -8, 4), 5, -)
-----
SELECT startswith(mid(s, 1, 6), 'ehwq') FROM mid_02 WHERE d2 = NULL;
startswith(mid(s, 1, 6), ehwq)
SELECT endswith(mid(s,-1,1),' ') FROM mid_02 WHERE id = 6;
endswith(mid(s, -1, 1),  )
1
SELECT substring(mid(s, 3, 19),3, 10) FROM mid_02 WHERE id + 1 = 4;
substring(mid(s, 3, 19), 3, 10)
284o 329&*
SELECT REVERSE(mid(s, -1, 2)) FROM mid_02;
reverse(mid(s, -1, 2))
9

&
null
null
 
3
SELECT hex(mid(s, 1, 2)) FROM mid_02 WHERE id = 7;
hex(mid(s, 1, 2))
3132
SELECT * FROM mid_02 WHERE s = (SELECT s FROM mid_02 WHERE mid(s,1,2) = 'wo');
id    s    d1    d2
1    woshishei3829    3    12
SELECT(SELECT s FROM mid_02 WHERE mid(s,1,3) = 'ehw'),d1,d2 FROM mid_02 WHERE id = 6;
(select s from mid_02 where mid(s, 1, 3) = ehw)    d1    d2
ehwqkjf8392__+     null    6
SELECT * FROM mid_02 WHERE s = (SELECT s FROM mid_02 WHERE mid(s,1,10) = NULL);
id    s    d1    d2
DROP TABLE IF EXISTS mid_03;
DROP TABLE IF EXISTS mid_04;
CREATE TABLE mid_03(
id int,
d1 tinyint unsigned,
str1 VARCHAR(50),
primary key (id));
CREATE TABLE mid_04(
id int,
d2 bigint,
str1 mediumtext NOT NULL,
primary key (id));
INSERT INTO mid_03 VALUES(1, 255, 'zheshimeihaodeyitian,这是美好的一天');
INSERT INTO mid_03 VALUES(2, 10, '明天更美好ehwqknjcw*^*qk67329&&*');
INSERT INTO mid_03 VALUES(3, NULL, 'ewgu278wd-+ABNJDSK');
INSERT INTO mid_03 VALUES(4, 1, NULL);
INSERT INTO mid_04 VALUES(1, 0, '盼望着,盼望着,东风来了,春天的脚步近了。 一切都像刚睡醒的样子,欣欣然张开了眼。山朗润起来了,水涨 起来了,太阳的脸红起来了。 小草偷偷地从土里钻出来，Choose to Be Alone on Purpose Here we are, all by ourselves, all 22 million of us by recent count, alone in our rooms');
INSERT INTO mid_04 VALUES(2, -34, 'zheshimeihaodeyitian,这是美好的一天');
INSERT INTO mid_04 VALUES(3, 35267192, 'ewgu278wd-+ABNJDSK');
INSERT INTO mid_04 VALUES(4, NULL, 'hey32983..........,,');
SELECT mid_03.id AS id_3,mid_04.id AS id_4 FROM mid_03,mid_04 WHERE mid(mid_03.str1,1,4) = mid(mid_04.str1,1,4);
id_3    id_4
1    2
3    3
SELECT mid_03.str1 AS str1_3,mid_04.str1 FROM mid_03,mid_04 WHERE mid(mid_03.str1,2,1) = mid(mid_04.str1,-1,1);
str1_3    str1
明天更美好ehwqknjcw*^*qk67329&&*    zheshimeihaodeyitian,这是美好的一天
SELECT mid(mid_03.str1, -10, 5) FROM mid_03,mid_04 WHERE mid_03.str1 = mid_04.str1;
mid(mid_03.str1, -10, 5)
an,这是
d-+AB
SELECT * FROM mid_03 WHERE str1 = (SELECT str1 FROM mid_04 WHERE mid(str1, 1, 19) = 'ewgu278wd-+ABNJDSK');
id    d1    str1
3    null    ewgu278wd-+ABNJDSK
SELECT mid(mid_03.str1, -10, 5)AS tmp, mid_04.str1 AS temp FROM mid_03 join mid_04 ON mid_03.str1 = mid_04.str1;
tmp    temp
an,这是    zheshimeihaodeyitian,这是美好的一天
d-+AB    ewgu278wd-+ABNJDSK
SELECT mid_03.id AS id_3,mid_04.id AS id_4 FROM mid_03 left join mid_04 ON mid(mid_03.str1,1,4) = mid(mid_04.str1,1,4);
id_3    id_4
1    2
2    null
3    3
4    null
SELECT mid_03.d1 AS d1_3,mid_04.d2 AS d2_4 FROM mid_03 right join mid_04 ON mid(mid_03.str1,1,4) = mid(mid_04.str1,1,4);
d1_3    d2_4
null    0
255    -34
null    35267192
null    null
